ADD_DEFINITIONS(-D_UNICODE)
ADD_DEFINITIONS(-D__CRT_SECURE_NO_WARNINGS)

SET(SELF_INCLUDE_DIR ${INCLUDE_DIR})
MESSAGE(STATUS ${SELF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SELF_INCLUDE_DIR})

FILE(GLOB LUA_HEADERS "../Lua/*.h*")
FILE(GLOB LUA_SOURCES "../Lua/*.c")

FILE(GLOB SELF_HEADERS "./*.hpp")
FILE(GLOB SELF_SOURCES "./*.cpp")

ADD_LIBRARY(${SELF}
	${LUA_HEADERS}
    ${LUA_SOURCES}
    ${SELF_HEADERS}
    ${SELF_SOURCES}
)

SET(LIBRARY_OUTPUT_PATH ${BUILD_DIR}/${LIB}/${PLATFORM})
SET(EXECUTABLE_OUTPUT_PATH ${BUILD_DIR}/${BIN}/${PLATFORM})

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS ${SELF}
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

# These are used to create visual studio folders.
SOURCE_GROUP(Lua\\Header FILES ${LUA_HEADERS})
SOURCE_GROUP(Lua\\Source FILES ${LUA_SOURCES})
SOURCE_GROUP(Header FILES ${SELF_HEADERS})
SOURCE_GROUP(Source FILES ${SELF_SOURCES})